# function-extractor-service

./: .gitignore  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: arch-design-ru.md  languages.md  parsers.md  tests.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
src/: config.py  main.py
src/api/: __init__.py  base.py  commenters.py  health.py  routes.py
src/core/: __init__.py  file_processor.py  language_detector.py  parser_factory.py
src/dto/: commenters.py  health.py
src/models/: __init__.py  api_responses.py  extraction_result.py  function_description.py  language.py
src/parsers/: __init__.py  base_parser.py  c_parser.py  cpp_parser.py  go_parser.py  java_parser.py  prompt_parser.py  python_parser.py
src/utils/: logger.py  prompt_extractor.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py  test_file_processor.py
tests/unit/: test_java_parser.py  test_language_detector.py  test_parser_factory.py  test_python_parser.py
